# PetraM_MUMPS

./: .gitignore  BUILD.txt  COPYRIGHT  Makefile  README.md  setup.py
Makefile_templates/: Makefile.local.cori.nersc  Makefile.local.loki  Makefile.local.macport  Makefile.local.mit_engaging
mumps_solve/: CMakeLists.txt  exported_symbols_list.txt  exported_version_script.txt  mumps_solve.cpp  mumps_solve.hpp
mumps_standalone/: Makefile  README.txt  c_solvetest.F  z_solvetest.F
mumps_standalone/dataset_complex/: matrix.000000  matrix.000002  matrix.000003  rhs_0.000000
mumps_standalone/dataset_z/: matrix.000001
petram/ext/: Makefile
petram/ext/mumps/: Makefile  README  hypre_to_mumps.cpp  hypre_to_mumps.hpp  hypre_to_mumps.i  hypre_to_mumps.py  hypre_to_mumps_wrap.cxx  hypre_to_mumps_wrap.h  makefile_lib  mumps_driver.py  mumps_solve.cpp  mumps_solve.hpp  mumps_solve.i  mumps_solve.py  mumps_solve_wrap.cxx  setup.py
scripts/: write_setup_local.py
setup_templates/: setup_default.py  setup_loki.py  setup_macport.py  setup_mit_engaging.py
